# cppcourse-brunel

./: CMakeLists.txt  CMakeLists.txt~  README.txt
src/: AllNeurons  Buffer  CMakeCache.txt  CMakeCache.txt~  CTestTestfile.cmake  Doxyfile  Doxyfile~  Introduction.cpp  Makefile  Network  Network.cpp  Network.hpp  Neuron  Neuron.cpp  Neuron.hpp  OneNeuron  README.md  buffertest.cpp  cmake_install.cmake  draftcmake  googletests  googletests.cpp  jupyterplot.txt  oneneurontest.cpp  spikes.txt  test_allneurons.cpp  testallneurons  unittest
src/Utility/: Constants.hpp
src/doxygen/: Doxyfile.in.bak  Doxyfile.in~
src/doxygen/html/: index.html
src/doxygen/latex/: refman.tex
src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/html/: Introduction_8cpp.html  Network_8cpp.html  Network_8hpp.html  Network_8hpp_source.html  Neuron_8cpp.html  Neuron_8hpp.html  Neuron_8hpp_source.html  annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  googletests_8cpp.html  index.html  md_README.html  pages.html  test__allneurons_8cpp.html
src/latex/: Introduction_8cpp.tex  Network_8cpp.tex  Network_8hpp.tex  Neuron_8cpp.tex  Neuron_8hpp.tex  annotated.tex  classNetwork.tex  classNeuron.tex  files.tex  googletests_8cpp.tex  index.tex  md_README.tex  refman.tex  test__allneurons_8cpp.tex
(+40 files in other folders)
